--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
     "@next-auth/prisma-adapter": "^1.0.7",
+    "@paypal/paypal-js": "^9.2.0",
+    "@paypal/paypal-server-sdk": "^2.2.0",
+    "@paypal/react-paypal-js": "^8.9.2",
     "@prisma/client": "^5.22.0",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
@@ -38,6 +41,8 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-toast": "^1.2.15",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@stripe/react-stripe-js": "^5.5.0",
+    "@stripe/stripe-js": "^8.6.4",
     "@tanstack/react-query": "^5.90.19",
     "@tiptap/core": "^3.15.3",
     "@tiptap/extension-image": "^3.15.3",
@@ -66,6 +71,7 @@
     "react-hook-form": "^7.71.1",
     "react-i18next": "^16.5.1",
     "server-only": "^0.0.1",
+    "stripe": "^20.2.0",
     "swiper": "^12.0.3",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
