--- a/package.json
+++ b/package.json
@@ -69,7 +69,10 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.71.1",
+    "react-hot-toast": "^2.6.0",
     "react-i18next": "^16.5.1",
+    "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.1",
     "server-only": "^0.0.1",
     "stripe": "^20.2.0",
     "swiper": "^12.0.3",
