--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,15 +2,16 @@ version: '3.8'
 
 services:
   db:
-    image: mysql:8.0
+    image: postgres:15-alpine
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: moroccan2024
-      MYSQL_DATABASE: moroccan_organica
+      POSTGRES_USER: user
+      POSTGRES_PASSWORD: password
+      POSTGRES_DB: moroccan_organica
     ports:
-      - '3307:3306'
+      - '5433:5432'
     volumes:
-      - db_data:/var/lib/mysql
+      - db_data:/var/lib/postgresql/data
 
 volumes:
   db_data:
