--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "nodemailer": "^7.0.13",
     "prisma": "^5.22.0",
     "react": "19.2.3",
+    "react-country-flag": "^3.1.0",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.71.1",
     "react-hot-toast": "^2.6.0",
