Refine benefits content styling, fix broken HTML tags, and update premium typography across benefits and blog sections

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@stripe/react-stripe-js": "^5.5.0",
     "@stripe/stripe-js": "^8.6.4",
+    "@tailwindcss/typography": "^0.5.19",
     "@tanstack/react-query": "^5.90.19",
     "@tiptap/core": "^3.15.3",
     "@tiptap/extension-image": "^3.15.3",
@@ -63,7 +64,7 @@
     "framer-motion": "^12.24.10",
     "i18next": "^25.7.3",
     "lucide-react": "^0.562.0",
-    "next": "16.1.1",
+    "next": "^16.1.6",
     "next-auth": "^4.24.13",
     "nodemailer": "^7.0.13",
     "prisma": "^5.22.0",
