--- a/package.json
+++ b/package.json
@@ -4,24 +4,15 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "prisma generate && next build",
+    "build": "next build",
     "start": "next start",
-    "lint": "eslint",
-    "db:studio": "prisma studio",
-    "db:seed": "prisma db seed",
-    "db:migrate": "prisma migrate dev",
-    "db:reset": "prisma migrate reset"
-  },
-  "prisma": {
-    "seed": "tsx prisma/seed.ts"
+    "lint": "eslint"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
-    "@next-auth/prisma-adapter": "^1.0.7",
     "@paypal/paypal-js": "^9.2.0",
     "@paypal/paypal-server-sdk": "^2.2.0",
     "@paypal/react-paypal-js": "^8.9.2",
-    "@prisma/client": "^5.22.0",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.11",
@@ -43,6 +34,7 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@stripe/react-stripe-js": "^5.5.0",
     "@stripe/stripe-js": "^8.6.4",
+    "@supabase/supabase-js": "^2.95.3",
     "@tanstack/react-query": "^5.90.19",
     "@tiptap/core": "^3.15.3",
     "@tiptap/extension-image": "^3.15.3",
@@ -66,7 +58,6 @@
     "next": "^16.1.6",
     "next-auth": "^4.24.13",
     "nodemailer": "^7.0.13",
-    "prisma": "^5.22.0",
     "react": "19.2.3",
     "react-country-flag": "^3.1.0",
     "react-dom": "19.2.3",
